--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,8 @@ p {
     margin-top: 5rem;
     margin-left: 5rem;
     object-fit: cover;
-    gap: 60px;
+    gap: 90px;
+    margin-bottom: 30rem;
 }
 
 /*
