--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,11 @@ p {
     text-align: justify;
 }
 
+.projekter {
+    margin-left: 5rem;
+    margin-bottom: 1rem;
+}
+
 /* FORSIDE */
 .grid_1 {
     display: grid;
@@ -45,6 +50,15 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 5rem;
+    margin-left: 5rem;
+    object-fit: cover;
+    gap: 90px;
+    margin-bottom: 20rem;
+}
+
+.grid_3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     margin-left: 5rem;
     object-fit: cover;
     gap: 90px;
