--- a/styles.css
+++ b/styles.css
@@ -81,11 +81,17 @@ a {
 }
 
 /* FOOTER */
-.footer {
+.footer_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     margin-left: 5rem;
     margin-bottom: 2rem;
     word-spacing: 30px;
     text-decoration: none;
+}
+
+.footer_tekst {
+
 }
 
 
