--- a/styles.css
+++ b/styles.css
@@ -85,13 +85,16 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-left: 5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
+    gap: 40rem;
+}
+
+.footer_menu {
     word-spacing: 30px;
     text-decoration: none;
 }
 
 .footer_tekst {
-
 }
 
 
