--- a/styles.css
+++ b/styles.css
@@ -91,10 +91,8 @@ a {
 
 .footer_menu {
     word-spacing: 30px;
-    text-decoration: none;
+    text-decoration: none; /* Hvorfor virker dette ikke?*/
 }
 
-.footer_tekst {
-}
 
 
