--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ p {
     margin-bottom: 15rem;
 }
 
+.projekter3 {
+    text-decoration: none;
+}
+
 /* PROJEKTER */
 .projekter_tekst {
     display: grid;
