--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,18 @@ h2 {
 h3 {
     font-family: 'PT Mono', monospace;
     font-weight: lighter;
-    font-size: 1.2rem;
+    font-size: 2rem;
 }
 
 h4 {
     font-family: 'Almarai', sans-serif;
     font-size: 4rem;
+}
+
+h5 {
+    font-family: 'PT Mono', monospace;
+    font-weight: lighter;
+    font-size: 1.2rem;
 }
 
 p {
@@ -79,12 +85,21 @@ a {
     text-decoration: none;
 }
 
+
+
 /* PROJEKTER */
 .projekter_tekst {
     display: grid;
     grid-template-columns: 1fr;
     margin-top: 5rem;
     margin-left: 5rem;
+    margin-bottom: 10rem;
+}
+
+.grid_web {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 10rem;
     margin-bottom: 15rem;
 }
 
