--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,15 @@ a {
     grid-template-columns: 1fr 1fr;
     margin-left: 10rem;
     margin-bottom: 15rem;
+    gap: 5px;
+}
+
+.grid_uxui {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 10rem;
+    margin-bottom: 15rem;
+    gap: 20px;
 }
 
 /* OM */
