--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,11 @@ a {
     margin-bottom: 10rem;
 }
 
+.h3 {
+    margin-left: 10rem;
+    margin-bottom: 2.5rem;
+}
+
 .grid_web {
     display: grid;
     grid-template-columns: 1fr 1fr;
