--- a/styles.css
+++ b/styles.css
@@ -93,28 +93,31 @@ a {
     grid-template-columns: 1fr;
     margin-top: 5rem;
     margin-left: 5rem;
-    margin-bottom: 10rem;
+    margin-bottom: 8rem;
 }
 
 .h3 {
     margin-left: 10rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.8rem;
 }
 
-.grid_web {
+.grid_web, .grid_uxui, .grid_animation {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-left: 10rem;
-    margin-bottom: 15rem;
-    gap: 5px;
+    margin-right: 10rem;
+    margin-bottom: 10rem;
+    gap: 100px;
 }
 
-.grid_uxui {
+/* denne står alene da der skal mere afstand til footeren */
+.grid_indhold {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-left: 10rem;
+    margin-right: 10rem;
     margin-bottom: 15rem;
-    gap: 20px;
+    gap: 100px;
 }
 
 /* OM */
