--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,6 @@ a {
     text-decoration: none;
 }
 
-
-
 /* PROJEKTER */
 .projekter_tekst {
     display: grid;
@@ -145,6 +143,19 @@ a {
     margin-bottom: 10rem;
     align-items: center;
     gap: 100px;
+}
+
+.grid_kontakt {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    gap: 175px;
+    margin-bottom: 15rem;
+}
+
+.kontaktliste {
+    word-spacing: 10px;
 }
 
 /*
