--- a/styles.css
+++ b/styles.css
@@ -154,8 +154,9 @@ a {
     margin-bottom: 15rem;
 }
 
-.kontaktliste {
-    word-spacing: 10px;
+.wordspacing {
+    word-spacing: 5px;
+    font-weight:900;
 }
 
 /*
