--- a/styles.css
+++ b/styles.css
@@ -123,30 +123,34 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 5rem;
-    margin-left: 5rem;
-    gap: 150px;
+    margin-left: 10rem;
+    gap: 130px;
     margin-bottom: 10rem;
 }
 
 .selvportraet2 {
-    width: 60%;
+    width: 65%;
+}
+
+.CV {
+    line-height: 1.5;
 }
 
 .grid_om_tekst {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-left: 5rem;
-    gap: 90px;
+    margin-left: 10rem;
+    gap: 130px;
     margin-bottom: 5rem;
 }
 
 .grid_billede {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-left: 5rem;
+    /*margin-left: 5rem;*/
     margin-bottom: 8rem;
     align-items: center;
-    gap: 100px;
+    gap: 175px;
 }
 
 .grid_kontakt {
