--- a/styles.css
+++ b/styles.css
@@ -166,15 +166,6 @@ a {
     word-spacing: 5px;
     font-weight:900;
 }
-
-/*
-.link_om {
-    text-align: center;
-    font-family: 'Almarai', sans-serif;
-    color: rgba(0, 0, 0, 0.806);
-    margin-top: 2rem;
-}
-*/
   
 a {
     color: rgba(0, 0, 0, 0.806);
@@ -182,6 +173,16 @@ a {
     margin-top: 2rem;
 }
 }
+
+/* TEMA 2 - WEB */
+.tema2_overskrift {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 5rem;
+    margin-left: 10rem;
+    margin-bottom: 6rem;
+}
+
 
 /* FOOTER */
 .footer_grid {
