--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,25 @@ a {
     margin-bottom: 2rem;
 }
 
+.grid_billede2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 10rem;
+    margin-bottom: 8rem;
+    align-items: center;
+    gap: 175px;
+}
+
+.proces_tekst {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 5rem;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    gap: 20px;
+    margin-bottom: 15rem;
+}
+
 
 /* FOOTER */
 .footer_grid {
