--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,12 @@ p {
     margin-bottom: 1rem;
 }
 
+.h4_overskrift2 {
+    margin-left: 10rem;
+    margin-top: 6rem;
+    margin-bottom: 1rem;
+}
+
 a {
     text-decoration: none;
 }
