--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 img {
@@ -11,7 +12,7 @@ img {
 }
 
 .border {
-    border: 4px solid #e2e2e2;
+    border: 2px solid #e2e2e2;
 }
 
 /* STYLING AF FONTE */
@@ -41,6 +42,12 @@ h5 {
     font-family: 'PT Mono', monospace;
     font-weight: lighter;
     font-size: 1.2rem;
+}
+
+h6 {
+    font-family: 'PT Mono', monospace;
+    font-weight: lighter;
+    font-size: 3rem;
 }
 
 p {
@@ -184,9 +191,9 @@ a {
 /* TEMA 2 - WEB */
 .tema_overskrift {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     margin-top: 5rem;
     margin-left: 10rem;
+    margin-right: 30rem;
     margin-bottom: 2rem;
 }
 
@@ -194,7 +201,7 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-left: 10rem;
-    margin-bottom: 8rem;
+    margin-bottom: 4rem;
     align-items: center;
     gap: 175px;
 }
@@ -202,7 +209,7 @@ a {
 .proces_tekst {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-top: 5rem;
+    margin-top: 3rem;
     margin-left: 10rem;
     margin-right: 10rem;
     gap: 20px;
