--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ p {
     grid-template-columns: 1fr 1fr;
     margin-left: 10rem;
     margin-right: 10rem;
-    margin-bottom: 10rem;
+    margin-bottom: 8rem;
     gap: 100px;
 }
 
@@ -246,3 +246,6 @@ a {
     word-spacing: 30px;
 }
 
+@media (max-width: 800px) {
+
+}
