--- a/menu.css
+++ b/menu.css
@@ -29,7 +29,7 @@ header {
   .menu a {
     display: block;
     padding: 10px;
-    color: #bb0c0c;
+    color: #000000;
     font-family: 'Almarai', sans-serif;
     text-decoration: none;
     transition: color 0.3s;
@@ -44,7 +44,7 @@ header {
   .burger .line {
     width: 100%;
     height: 2px;
-    background-color: #951414df;
+    background-color: #000000df;
     margin-bottom: 5px;
     transition: 0.2s linear;
   }
@@ -60,6 +60,10 @@ header {
 
     .burger {
       display: block;
+    }
+
+    nav {
+        margin: 20px;
     }
 
     .burger.active .line:nth-child(1) {
@@ -79,12 +83,12 @@ header {
     
     nav.active .menu {
         display: block;
-        background-color: #1E1E1E;
+        background-color: #ffffff;
         position: absolute;
         top: 60px;
         left: 0;
         width: 100%;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 10px rgb(255, 255, 255);
         z-index: 1;
     }
     
