--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,19 @@ p {
 
 
 @media (min-width: 800px) {
+/* FOOTER */
+.footer_menu {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.footer_menu li {
+    margin-left: 20px;
+}
+
 /* FORSIDE */
 .grid_1 {
     display: grid;
@@ -279,13 +292,23 @@ h5 {
 
 .footer_grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     margin-left: 0.5rem;
     margin-bottom: 2rem;
     margin-top: 10rem;
+    gap: 0rem;
+}
+
+.navn {
+    grid-column: 3 / span 1;
+    grid-row: 1 / span 1;
 }
 
 .no_underline {
     text-decoration: none;
+}
+
+ul {
+    list-style: none;
 }
 }
